src/thirdparty/requirejs/tests/error/doubleRequire/c.js
define(['myShim'], function (broken) {
  return { name: 'c' };
});
